# qbank

./: Cargo.toml  README.md  flake.nix
migrations/: 001_initial.sql
src/: cli.rs  error.rs  main.rs
src/api/: client.rs  mod.rs  prompts.rs
src/db/: files.rs  mod.rs  pages.rs  questions.rs  settings.rs
src/pdf/: mod.rs  parser.rs
src/processor/: mod.rs  page.rs  pdf.rs  question.rs  setup.rs
src/tui/: mod.rs  state.rs  tui_loop.rs  widgets.rs
