[package]
name = "qbank"
version = "0.1.0"
edition = "2024"

[dependencies]
pdf-extract = "0.10.0"
regex = "1.12.3"
once_cell = "1.21"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "migrate",
] }
llama-cpp-2 = { version = "0.1.143", features = ["vulkan"] }
encoding_rs = "0.8"
config = "0.15"
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
llama-cpp-sys-2 = { version = "0.1.143", features = ["vulkan"] }
rand = "0.10"

[dev-dependencies]

[lints.rust]
dead_code = "allow"
